--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
 	"dart.previewFlutterUiGuides": true,
-	"dart.previewFlutterUiGuidesCustomTracking": true
+	"dart.previewFlutterUiGuidesCustomTracking": true,
+	"editor.tabSize": 8
 }
