--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   provider: 3.1.0
   rxdart: ^0.21.0
   intl: ^0.16.1
+  font_awesome_flutter: 8.4.0
 
 dev_dependencies:
   flutter_test:
