--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   font_awesome_flutter: 8.4.0
 
   pull_to_refresh: ^1.5.8
+  flutter_local_notifications: ^1.4.1
 
 dev_dependencies:
   flutter_test:
