--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
 
   pull_to_refresh: ^1.5.8
   flutter_local_notifications: ^1.4.1
+  shared_preferences: ^0.5.6+3
 
 dev_dependencies:
   flutter_test:
